# nannou_template

./: .gitignore  Cargo.toml  LICENSE  README.md
configs/: default.toml
src/: constants.rs  display.rs  main.rs
src/core/: config.rs  mod.rs
